# facial-recognition

./: .gitignore  CMakeLists.txt  README.md  algorithmfactory.cpp  algorithmfactory.hpp  algorithmtest.cpp  algorithmtest.hpp  facerecognizer.hpp  imageloader.hpp  imageprocessor.hpp  main.cpp  result_precision.js  result_preproc.js  result_time.js  tester.cpp  tester.hpp  tools.cpp  tools.hpp
libs/: 3dviewer.cpp  3dviewer.hpp  afm.cpp  afm.hpp  facedetection.cpp  facedetection.hpp  ganpan.cpp  ganpan.hpp  icp.cpp  icp.hpp  landmarkposecorretion.cpp  landmarkposecorretion.hpp
libs/icp/: matrix.cpp
loader/: 3dloader.cpp  3dloader.hpp  irloader.cpp  irloader.hpp  visloader.cpp  visloader.hpp
processor/: 3dgaussianblur.cpp  3dgaussianblur.hpp  dct.cpp  dct.hpp  gaussianblur.cpp  gaussianblur.hpp  lbp.cpp  lbp.hpp  posecorretion.cpp  posecorretion.hpp  roi.cpp  roi.hpp
recognizer/: lda.cpp  lda.hpp  lpp.cpp  lpp.hpp  pca.cpp  pca.hpp  svm.cpp  svm.hpp
tester/: 3dtester.cpp  3dtester.hpp  irtester.cpp  irtester.hpp  vistester.cpp  vistester.hpp
